Fix: Add monorepo package build steps to GitHub Actions
Root cause of build failure:
- @deta/utils and other local packages not built before app build
- Vite/Rollup failed to resolve package entry points

Solution:
- Added 'yarn build:packages' step (builds @deta/utils, @deta/backend)
- Added 'yarn build:libs' step (builds shared libraries)
- Must build workspace dependencies before app build

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -34,6 +34,12 @@ jobs:
       - name: Install root dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Build packages (@deta/utils, @deta/backend, etc.)
+        run: yarn build:packages
+
+      - name: Build libs
+        run: yarn build:libs
+
       - name: Install app dependencies
         working-directory: ./app
         run: yarn install --frozen-lockfile
