Fix: Remove erasableSyntaxOnly TypeScript option for CI compatibility
- Commented out 'erasableSyntaxOnly' from 3 tsconfig.json files
- This option requires TypeScript 5.5+ which is not available in CI
- Files modified:
  - packages/ui/tsconfig.json
  - packages/services/tsconfig.json
  - packages/editor/tsconfig.json
- Fixes GitHub Actions build failure in @deta/teletype preprocessing

--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -23,8 +23,8 @@
 		"moduleResolution": "bundler",
 		"module": "esnext",
 		"verbatimModuleSyntax": true,
-		"noUncheckedIndexedAccess": true,
-		"erasableSyntaxOnly": true
+		"noUncheckedIndexedAccess": true
+		// "erasableSyntaxOnly": true  // Commented out - requires TypeScript 5.5+ (not available in CI)
 	},
   "include": [
 		"ambient.d.ts",
