Fix: Disable erasableSyntaxOnly in @deta/teletype tsconfig
- Explicitly set erasableSyntaxOnly to false in teletype package
- This package extends @tsconfig/svelte which may include TypeScript 5.5+ options
- Ensures CI compatibility with older TypeScript versions on Windows Server
- Prevents compilation errors during @deta/teletype#build step

--- a/packages/teletype/tsconfig.json
+++ b/packages/teletype/tsconfig.json
@@ -13,7 +13,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "declaration": true
+    "declaration": true,
+    "erasableSyntaxOnly": false  // Explicitly disable TypeScript 5.5+ option for CI compatibility
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
