Fix: Remove erasableSyntaxOnly from teletype tsconfig completely
- Removed erasableSyntaxOnly option entirely (not just set to false)
- TypeScript compiler throws error even when option is set to false
- This package extends @tsconfig/svelte which may include TS 5.5+ options
- Ensures Windows CI with older TypeScript versions can compile successfully
- Note: All instances of erasableSyntaxOnly are now commented out or removed

--- a/packages/teletype/tsconfig.json
+++ b/packages/teletype/tsconfig.json
@@ -13,8 +13,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "declaration": true,
-    "erasableSyntaxOnly": false  // Explicitly disable TypeScript 5.5+ option for CI compatibility
+    "declaration": true
+    // NOTE: erasableSyntaxOnly is NOT included - it's a TypeScript 5.5+ option not available in CI
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
