Fix: Add @deta/teletype build dependency in turbo.json
- Added missing @deta/teletype#build task configuration
- Teletype depends on @deta/ui#build and @deta/editor#build
- Without this, Turborepo doesn't know build order
- This caused teletype to build before UI was ready
- Result: SCSS import errors when teletype tried to use UI components

Root cause of build failures #3-#5:
- teletype uses @deta/ui components (Button, ShortcutVisualizer)
- UI's Toast.svelte has @use '@deta/ui/styles/utils'
- Teletype was building before UI finished, causing Sass import errors
- Now turbo will build UI first, then teletype

--- a/turbo.json
+++ b/turbo.json
@@ -28,6 +28,11 @@
       "outputs": ["dist/**"],
       "outputLogs": "new-only"
     },
+    "@deta/teletype#build": {
+      "dependsOn": ["@deta/ui#build", "@deta/editor#build"],
+      "outputs": ["dist/**"],
+      "outputLogs": "new-only"
+    },
     "@deta/backend#build": {
       "cache": false
     },
